--- a/monCss.css
+++ b/monCss.css
@@ -29,3 +29,18 @@ p
 {
     background-color: white;
 }
+
+.col-md-3
+{
+  text-align: center;
+}
+
+.col-md-4
+{
+  text-align: center;
+}
+
+.col-md-12 h3
+{
+  text-align: center;
+}
